revised for standard TS approach; styling/linting

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   },
   "description": "A Discord bot that allows users to play Kessel Sabacc.",
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^2.11.0",
     "@types/node": "^22.10.1",
     "eslint": "^9.16.0",
     "eslint-config-love": "^109.0.0",
+    "eslint-plugin-module-bindings-newline": "^1.0.1",
     "prettier": "^3.4.1",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
@@ -20,8 +22,8 @@
   "scripts": {
     "build": "tsup src/index.ts --minify",
     "dev": "tsx watch src/index.ts",
-    "format": "prettier --write \"**/*.{json,js,ts}\"",
-    "lint": "eslint . --fix",
+    "format": "prettier --write \"**/*.json\"",
+    "lint": "eslint  --fix",
     "start": "node ."
   },
   "version": "1.0.0"
