--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2020"
+    "target": "ES2020",
+    "useUnknownInCatchVariables": true
   },
   "include": ["src"]
 }
