added io; fixed eslint issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,12 @@
     },
     "editor.formatOnSave": false
   },
+  "[javascript]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": "explicit"
+    },
+    "editor.formatOnSave": false
+  },
   "eslint.validate": ["typescript"],
   "eslint.workingDirectories": ["./"]
 }
