--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "CommonJS",
+    "module": "NodeNext",
     "noImplicitAny": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "outDir": "./dist",
     "removeComments": true,
     "resolveJsonModule": true,
@@ -15,8 +15,8 @@
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2020",
+    "target": "ESNext",
     "useUnknownInCatchVariables": true
   },
-  "include": ["src"]
+  "include": ["src/**/*", "eslint.config.mjs"]
 }
