--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "author": "Josh Jones",
   "dependencies": {
     "discord.js": "^14.16.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "random-js": "^2.1.0"
   },
   "description": "A Discord bot that allows users to play Kessel Sabacc.",
   "devDependencies": {
