--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   },
   "description": "A Discord bot that allows users to play Kessel Sabacc.",
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@types/node": "^22.10.1",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.7",
     "prettier": "3.4.2",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
@@ -23,8 +28,9 @@
     "build": "tsup src/index.ts --minify",
     "dev": "tsx watch src/index.ts",
     "format": "prettier . --write",
-    "lint": "eslint",
-    "start": "node ."
+    "lint": "prettier . --list-different && eslint",
+    "start": "node .",
+    "prepare": "husky"
   },
   "version": "1.0.0"
 }
