--- a/.github/workflows/main-commit.yaml
+++ b/.github/workflows/main-commit.yaml
@@ -5,6 +5,8 @@ jobs:
     steps:
       - name: Checkout files
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
