--- a/.github/workflows/main-commit.yaml
+++ b/.github/workflows/main-commit.yaml
@@ -9,6 +9,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+      - name: Build project
+        run: npm run build
       - env:
           GITHUB_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
         id: semantic
