--- a/.github/workflows/main-commit.yaml
+++ b/.github/workflows/main-commit.yaml
@@ -9,7 +9,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-      - name: Build project
+      - env:
+          NODE_AUTH_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
+        name: Install dependencies
+        run: npm ci
+      - name: Run linting processes
+        run: npm run lint
+      - name: Run build processes
         run: npm run build
       - env:
           GITHUB_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
