--- a/releaserc.json
+++ b/releaserc.json
@@ -12,8 +12,8 @@
         "assets": [
           {
             "label": "The files needed to run the bot.",
-            "name": "discord-sabacc.zip",
-            "path": "dist/** images/** .env.example LICENSE package-lock.json package.json readme.md"
+            "name": "artifact.zip",
+            "path": "release/artifact.zip"
           }
         ]
       }
