--- a/.github/workflows/main-commit.yaml
+++ b/.github/workflows/main-commit.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
           upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}/assets{?name,label}
           asset_path: release/artifact.zip
-          asset_name: ${{ github.repository }}-${{ steps.semantic.outputs.new_release_version }}.zip
+          asset_name: ${GITHUB_REPOSITORY#*/}-${{ steps.semantic.outputs.new_release_version }}.zip
           asset_content_type: application/zip
 name: Main Commit
 on:
