--- a/releaserc.json
+++ b/releaserc.json
@@ -1,6 +1,11 @@
 {
   "plugins": [
-    "@semantic-release/changelog",
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
     [
       "@semantic-release/commit-analyzer",
       {
