--- a/.github/workflows/main-commit.yaml
+++ b/.github/workflows/main-commit.yaml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}/assets{?name,label}
-          asset_path: release/artifact.zip
+          asset_path: release/${{ env.asset_filename }}.zip
           asset_name: ${{ env.asset_filename }}.zip
           asset_content_type: application/zip
 name: Main Commit
