fix: release artifact naming collision fix

--- a/.github/workflows/main-commit.yaml
+++ b/.github/workflows/main-commit.yaml
@@ -29,11 +29,19 @@ jobs:
             @semantic-release/commit-analyzer@13.0.1
             @semantic-release/github@11.0.1
             @semantic-release/release-notes-generator@14.0.3
+      - env:
+          GITHUB_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
+        if: steps.semantic.outputs.new_release_published == 'true'
+        name: Get release ID
+        run: |
+          RELEASE_TAG=${{ steps.semantic.outputs.new_release_git_tag }}
+          RELEASE_ID=$(gh api repos/${{ github.repository }}/releases/tags/$RELEASE_TAG --jq '.id')
+          echo "release_id=$RELEASE_ID" >> $GITHUB_ENV
       - if: steps.semantic.outputs.new_release_published == 'true'
         name: Run build processes
         run: npm run build
       - if: steps.semantic.outputs.new_release_published == 'true'
-        name: Create release asset
+        name: Create release assets
         run: |
           PROJECT_NAME="${GITHUB_REPOSITORY#*/}"
           FILENAME="${PROJECT_NAME}-${{ steps.semantic.outputs.new_release_version }}"
@@ -58,20 +66,12 @@ jobs:
       - env:
           GITHUB_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
         if: steps.semantic.outputs.new_release_published == 'true'
-        name: Get release ID
-        run: |
-          RELEASE_TAG=${{ steps.semantic.outputs.new_release_git_tag }}
-          RELEASE_ID=$(gh api repos/${{ github.repository }}/releases/tags/$RELEASE_TAG --jq '.id')
-          echo "release_id=$RELEASE_ID" >> $GITHUB_ENV
-      - env:
-          GITHUB_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
-        if: steps.semantic.outputs.new_release_published == 'true'
         name: Upload Linux release asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}/assets{?name,label}
           asset_path: release/${{ env.asset_filename }}-linux.zip
-          asset_name: ${{ env.asset_filename }}
+          asset_name: ${{ env.asset_filename }}-linux.zip
           asset_content_type: application/zip
       - env:
           GITHUB_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
@@ -81,7 +81,7 @@ jobs:
         with:
           upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}/assets{?name,label}
           asset_path: release/${{ env.asset_filename }}-macos.zip
-          asset_name: ${{ env.asset_filename }}
+          asset_name: ${{ env.asset_filename }}-macos.zip
           asset_content_type: application/zip
       - env:
           GITHUB_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
@@ -91,7 +91,7 @@ jobs:
         with:
           upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}/assets{?name,label}
           asset_path: release/${{ env.asset_filename }}-win.zip
-          asset_name: ${{ env.asset_filename }}
+          asset_name: ${{ env.asset_filename }}-win.zip
           asset_content_type: application/zip
 name: Main Commit
 on:
