--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.7",
     "prettier": "3.4.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
